# json-shape

./: README.md  json-shape.cabal
cli/: Main.hs
src/: JsonShape.hs
test/: Test.hs
